Botono de notificaciones agregado

--- a/src/customv2.css
+++ b/src/customv2.css
@@ -296,6 +296,10 @@
         margin-left: 4.2%;
         margin-top: 6%;
     }
+    .notificaciones{
+        margin-left: 4.2%;
+        margin-top: 10%;
+    }
     .detallesUser{
         margin-top: 3%;
         margin-left: 4.2%;
