--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,7 @@
+:root{
+  --theme-background-color: black
+}
+
 .logo {
   margin-top: 2%;
   color: #4b7dfa;
@@ -292,4 +296,194 @@
 .logov2 h2{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 3rem;
+}
+
+
+
+/* Home agregando diseno */
+@media (min-width: 1000px) {
+    .container-home{
+      width: 100%;
+      height: 100vh;
+      display: flex;
+      background-color: black;
+    }
+
+    /* style home side bar filtro*/
+    .home-side-bar-filtro{
+      width: 4%;
+      height: 100vh;
+      background-color: var(--theme-background-color);
+      display: flex;
+      flex-direction: column;
+    
+    }
+    /* style home image user container filtro*/
+    .home-image-user{
+      width: 100%;
+      height: 25%;
+      color: white;
+      background-color: var(--theme-background-color);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-around;
+    }
+    .home-side-bar-filtro-circle-image-avatar{
+      background-color: white;
+      color: white;
+      width: 2.5em;
+      height: 2.5em;
+      border-radius: 50%;
+      box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+    }
+
+    /* style home side bar filtro icons*/
+    .home-side-bar-filtro-icons{
+      color: white;
+      width: 100%;
+      height: 50%;
+      background-color: var(--theme-background-color);
+      display: flex;
+    
+      align-items: center;
+      justify-content: space-evenly;
+    }
+    ul,ol{
+      list-style: none;
+    }
+    .list-home-side-bar-filtro-icons li{
+      padding: 4px;
+      margin: 6px;
+      transition: 1s ease-out;
+    }
+    .list-home-side-bar-filtro-icons li:hover{
+      background-color: white;
+      color: black;
+      padding: 4px;
+      transition: 1s ease-out;
+      border-radius: 6px;
+    }
+
+
+
+    .home-side-bar-filtro-ajustes{
+      color: white;
+      width: 100%;
+      height: 25%;
+      background-color: var(--theme-background-color);
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      align-items: center;
+     
+    }
+
+    /* style home side bar filtro view */
+
+    input[type="file"]{
+      display: none;
+    }
+    label{
+      color: white;
+    }
+    #canvas {
+      display: none;
+      text-align: center;
+      max-width: 100%;
+      max-height: 100vh;
+      background-color: white;
+  }
+  
+    .home-side-bar-filtro-view{
+      width: 15%;
+      height: 100vh;
+      display: none;
+      flex-direction: column;
+   align-items: center;
+      background-color: black;
+      transition: 1s ease-in-out;
+    }
+
+
+    /* style home side bar imagen*/
+    .home-side-bar-imagen{
+      width: 92%;
+      height: 100vh;
+      background-color: black;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .home-side-bar-imagen-message-imagen h2,h3{
+      font-size: 1rem;
+      color: white;
+      font-family: Arial, Helvetica, sans-serif;
+      border: 1px solid white;
+      border-radius: 15px;
+      padding: 10px;
+    }
+
+    /* style home side bar settings*/
+    .home-side-bar-settings{
+      width: 4%;
+      height: 100vh;
+      background-color: blueviolet;
+    }
+
+
+    /* side bar filtros canava*/
+    .home-list-image-filtros{
+      width: 80%;
+      height: 100%;
+    
+    }
+    .home-list-image-filtros > li {
+      margin-top: 10px;
+    background-color: rgb(44, 44, 44);
+     
+      padding: 10px;
+      color: white;
+      font-family: Arial, Helvetica, sans-serif;
+    }
+
+    .home-list-image-filtros > li:hover{
+     border: 1px solid #107cfa;
+    }
+    .side-bar-ajustes-etc{
+      width: 10%;
+      color: white;
+      font-size: .6em;
+      font-family: Arial, Helvetica, sans-serif;
+      display: none;
+      height: 100vh;
+      background-color: #272829;
+    }
+    .descargar-image{
+      color: white;
+      width: 100%;
+      height: 25%;
+      background-color: black;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+    .ajustes-image{
+      color: white;
+      width: 100%;
+      height: 50%;
+      background-color: black;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+    .espacio{
+      color: white;
+      width: 100%;
+      height: 25%;
+      background-color: black;
+    }
+    
 }
