--- a/src/style.css
+++ b/src/style.css
@@ -688,16 +688,21 @@
     }
     .div-buscador{
         width: 100%;
-        height: auto;
+        height: 84%;
         display: flex;
         flex-direction: column;
         align-items: center;
+       
     }
     .div-buscador ul{
         margin-top: 10px;
-        height: 600px;
+        height: 100%;
+        width: 100%;
         overflow:hidden;
         overflow-y:scroll;
+    }
+    .div-buscador ul li {
+      font-size: .8rem;
     }
     .buscar-amigo{
         width: 80%;
