--- a/src/style.css
+++ b/src/style.css
@@ -185,6 +185,18 @@
   background-color: transparent;
   animation: loadingAround 2s linear infinite;
 }
+.loadingImg{
+  width: 60px;
+  height: 60px;
+  display: block;
+  border-radius: 50%;
+  border-top: 3px solid rgb(235, 234, 234);
+  border-bottom: 3px solid rgb(235, 234, 234);
+  border-left: 3px solid rgb(235, 234, 234);
+  border-right: 3px solid #107cfa;
+  background-color: transparent;
+  animation: loadingAround 2s linear infinite;
+}
 .animate__animated.animate__flip {
   --animate-duration: 2s;
 }
@@ -423,7 +435,7 @@
     text-align: center;
     max-width: 100%;
     max-height: 100vh;
-    background-color: white;
+    background-color: black;
   }
 
   .home-side-bar-filtro-view {
@@ -797,5 +809,13 @@
     color: black;
     padding: 8px;
     border-radius: 3px;
+  }
+  .divloading{
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    display: none;
+    align-items: center;
+    justify-content: center;
   }
 }
