--- a/src/style.css
+++ b/src/style.css
@@ -95,6 +95,9 @@
 .container-card {
   width: 100%;
   height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .card {
   font-family: Arial, Helvetica, sans-serif;
@@ -106,72 +109,139 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+ 
 }
-.select-img {
-  border-radius: 50%;
-  width: 60px;
-  height: 60px;
-  background-color: #107cfa;
-}
-.select-img img {
-  border-radius: 50%;
-}
-.container-img-input {
-  padding: 10px;
-  display: 100%;
-  display: flex;
-  margin-top: 2%;
-  align-items: center;
-  justify-content: center;
-}
-.container-img-input input {
-  margin-left: 1%;
+.container-inputs-signUp{
+  width: 100%;
+  height: fit-content;
 }
 
-.input-correo-signUp {
-  margin-left: 2%;
-  margin-top: 5%;
-  border: none;
-  font-size: 16px;
-  font-family: Arial, Helvetica, sans-serif;
-  width: 80%;
-  padding: 10px;
-  border-bottom: 2px solid #b7bbbe;
+.input-file-img-user{
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ 
 }
-.container-input-validation {
+.view-img-user-selected-signUp{
+  width: 4em;
+  height: 4em;
+  object-fit: cover;
+  border-radius: 50%;
+}
+.view-img-user-selected-signUp img{
+  width: 4em;
+  height: 4em;
+  object-fit: cover;
+  border-radius: 50%;
+}
+.input-username-signUp{
+  width: 100%;
+ 
+  height: fit-content;
   display: flex;
   flex-direction: column;
 }
-.container-input-loading {
-  display: flex;
-}
-.input-password-signup {
-  margin-top: 5%;
-  font-size: 16px;
-  margin-left: 2%;
-  border: none;
-  padding: 10px;
-  width: 80%;
-  border-bottom: 2px solid #b7bbbe;
-}
-.container-button-signUp {
+.input-correo-signUp{
   width: 100%;
-
+ 
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+}
+.input-password-signUp{
+  width: 100%;
+  margin-top: 3%;
+  height: fit-content;
   display: flex;
   justify-content: center;
+ 
 }
-.button-signUp {
-  border-radius: 6px;
-  border: none;
-  font-weight: 600;
-  padding: 8px;
+.input-password-signUp input{
+  
+  padding: 10px;
+  border: 1px solid gray;
   width: 50%;
-  height: 35px;
-  margin-top: 5%;
-  background-color: #4b7dfa;
-  color: white;
-  font-family: Arial, Helvetica, sans-serif;
 }
+.input-correo-signUp div p {
+  margin-left: 22%;
+ 
+}
+.input-username-signUp div p{
+  margin-left: 22%;
+ 
+}
+.container-input-username-validation-signUp{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2%;
+}
+.container-input-correo-validation-signUp{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2%;
+}
+.container-input-correo-validation-signUp input{
+  padding: 10px;
+  border: 1px solid gray;
+  width: 50%;
+}
+.container-input-username-validation-signUp input{
+  padding: 10px;
+  margin-top: 2%;
+  border: 1px solid gray;
+  width: 50%;
+}
+.loading-signUp{
+  display: none;
+  width: 1.5em;
+  height: 1.5em;
+  border-radius: 50%;
+  background-color: transparent;
+  border-bottom: 2px solid grey;
+  border-top: 2px solid grey;
+  border-left: 2px solid grey;
+  border-right: 2px solid #107cfa;
+  animation: loadingAround 1s linear infinite;
+}
+.container-button-signUp{
+  width: 100%;
+  height: 32%;
+ 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.button-signUp{
+  background-color: black;
+  border: none;
+  color: white;
+  height: 3em;
+  width: 60%;
+  border-radius: 6px;
+}
+.message-validacion-username p{
+  
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+}
+.message-validacion-correo p{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+}
+
+
+
+
+
+
+
+/* loading */
 .loading {
   margin: auto;
   width: 20px;
