--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,47 @@
   --theme-background-color: black;
 }
 
+
+/* marcador user conectado*/
+#moveobj{
+  position: absolute;
+    box-sizing: border-box;
+    display: none;
+    flex-direction: column;
+}
+#poniter{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: .8rem;
+  position: absolute;
+  box-sizing: border-box;
+  width: 7em;
+  height: 3em;
+  padding: 5px;
+  text-align: center;
+
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  display: flex;
+  align-items: center;
+  background-color: pink;
+}
+.line{
+  width: 3px;
+  height: 50px;
+  background-color: pink;
+}
+#poniter img{
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+}
+
+
+
+
+
+
+
 .logo {
   margin-top: 2%;
   color: #4b7dfa;
@@ -383,11 +424,15 @@
 }
 
 /* Home agregando diseno */
+
+
 @media (min-width: 1000px) {
   .container-home {
     width: 100%;
     height: 100vh;
     display: flex;
+    overflow-y: hidden;
+    overflow-x: hidden;
     background-color: black;
   }
 
