--- a/src/style.css
+++ b/src/style.css
@@ -2,16 +2,10 @@
   --theme-background-color: black;
 }
 
-
-
-
-
-
-
-
-
-
-
+.next-signUp{
+  cursor: pointer;
+  color: #107cfa;
+}
 .logo {
   margin-top: 2%;
   color: #4b7dfa;
